Fix margin issues on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 20px;
+  margin-right: 20px;
   margin-bottom: 0px;
 }
 
