--- a/src/components/ZodiacCard.css
+++ b/src/components/ZodiacCard.css
@@ -37,6 +37,7 @@
   left: 34px;
   top: 150px;
   border-radius: 20px;
+  margin-left: 2px;
 
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   display: flex;
